# Python_Learning

./: Chatbot.py  Langchain.py  Untitled-1.py  file_organizer.py  gemini_api.py  generate_100_files.py  generate_test_files.py  my_rag_app.py  test.py
POETRY_DEV/: pyproject.toml
chroma_db/: chroma.sqlite3
chroma_db/6464fa90-db24-402e-81fc-52c95ada382f/: index_metadata.pickle
